@@ -17,6 +17,8 @@
   - Add POD for DJabberd::Agent, DJabberd::Component and a bunch of
     other related modules.
 
+  - Make bots automatically accept roster subscription requests.
+
 0.83  2007-05-08
   - the "yes, this project is still alive" release
 
